--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.13.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "oracledb": "^5.3.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "timeago.js": "^4.0.2"
